k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cci-web-deployment
  labels:
    app: cci-web
spec:
  replicas: 3  # Number of replicas
  selector:
    matchLabels:
      app: cci-web
  template:
    metadata:
      labels:
        app: cci-web
    spec:
      containers:
      - name: cci-web-container
        image: ${IMAGE_PATH}
        ports:
        - containerPort: 8080
