k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cci-test-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
    protocol: TCP
  selector:
    app: cci-web
